--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
         min-height: 100vh;
         margin: 0;
         padding: 0;
-        background: no-repeat center/132px url(/assets/logo.png),
+        background: no-repeat center/132px url(/assets/logo.svg),
           linear-gradient(186deg, #32fff5 -100%, #08bee5 80%) !important; /* override the background set by aragonUI */
       }
     </style>
